# modem-monitor

./: CMakeLists.txt  LICENSE  README.md  modem-monitor.service
cmake/: FindNetlink.cmake  FindSystemd.cmake
inc/: mm_dms.h  mm_log.h  mm_netlink.h  mm_qmux.h  mm_run_helpers.h  mm_sdbus.h  mm_wds.h
src/: dms.c  main.c  netlink.c  qmux.c  run_helpers.c  sdbus.c  wds.c
